--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>second demo</h1>
+    <p>This will be in the second commit!</p> 
+    <p>This will be in the second commit!</p> 
 </body>
 </html>
