--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>second demo</h1>
     <p>This will be in the second commit!</p> 
     <p>This will be in the second commit!</p> 
+    <p> final example</p>
 </body>
 </html>
